--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
     </properties>
     
     <dependencies>
+	    <dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.11-beta2</version>
+		</dependency>
+    
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
